// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check page horizontal layout example against snapshot 1`] = `
<Page
  aria-label="Page layout"
  breadcrumb={null}
  className="my-page-class"
  header={
    <Unknown
      avatar=" | Avatar"
      logo="Logo"
      toolbar="Toolbar"
      topNav="Navigation"
    />
  }
  id="PageId"
  isManagedSidebar={false}
  mainContainerId={null}
  onPageResize={[Function]}
  sidebar={
    <Unknown
      isNavOpen={true}
    />
  }
  skipToContent={null}
>
  <div
    aria-label="Page layout"
    className="pf-c-page my-page-class"
    id="PageId"
  >
    <Component
      avatar=" | Avatar"
      logo="Logo"
      toolbar="Toolbar"
      topNav="Navigation"
    >
      <header
        className="pf-c-page__header"
        role="banner"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        <div
          className="pf-c-page__header-nav"
        >
          Navigation
        </div>
        <div
          className="pf-c-page__header-tools"
        >
          Toolbar
           | Avatar
        </div>
      </header>
    </Component>
    <Component
      isNavOpen={true}
    >
      <div
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      >
        <div
          className="pf-c-page__sidebar-body"
        />
      </div>
    </Component>
    <main
      className="pf-c-page__main"
      id={null}
      role="main"
      tabIndex={-1}
    >
      <Component
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </Component>
      <Component
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </Component>
      <Component
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </Component>
      <Component
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </Component>
    </main>
  </div>
</Page>
`;

exports[`Check page to verify breadcrumb is created 1`] = `
<Page
  aria-label="Page layout"
  breadcrumb={<PageBreadcrumb />}
  className="my-page-class"
  header={
    <Unknown
      avatar=" | Avatar"
      logo="Logo"
      toolbar="Toolbar"
      topNav="Navigation"
    />
  }
  id="PageId"
  isManagedSidebar={false}
  mainContainerId={null}
  onPageResize={[Function]}
  sidebar={
    <Unknown
      isNavOpen={true}
    />
  }
  skipToContent={null}
>
  <div
    aria-label="Page layout"
    className="pf-c-page my-page-class"
    id="PageId"
  >
    <Component
      avatar=" | Avatar"
      logo="Logo"
      toolbar="Toolbar"
      topNav="Navigation"
    >
      <header
        className="pf-c-page__header"
        role="banner"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        <div
          className="pf-c-page__header-nav"
        >
          Navigation
        </div>
        <div
          className="pf-c-page__header-tools"
        >
          Toolbar
           | Avatar
        </div>
      </header>
    </Component>
    <Component
      isNavOpen={true}
    >
      <div
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      >
        <div
          className="pf-c-page__sidebar-body"
        />
      </div>
    </Component>
    <main
      className="pf-c-page__main"
      id={null}
      role="main"
      tabIndex={-1}
    >
      <section
        className="pf-c-page__main-breadcrumb"
      >
        <PageBreadcrumb>
          <Component>
            <nav
              aria-label="Breadcrumb"
              className="pf-c-breadcrumb"
            >
              <ol
                className="pf-c-breadcrumb__list"
              >
                <Component>
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    Section Home
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            transform=""
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                  </li>
                </Component>
                <Component
                  to="#"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <a
                      className="pf-c-breadcrumb__link"
                      href="#"
                      target={null}
                    >
                      Section Title
                    </a>
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            transform=""
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                  </li>
                </Component>
                <Component
                  to="#"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <a
                      className="pf-c-breadcrumb__link"
                      href="#"
                      target={null}
                    >
                      Section Title
                    </a>
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            transform=""
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                  </li>
                </Component>
                <Component
                  isActive={true}
                  to="#"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <a
                      aria-current="page"
                      className="pf-c-breadcrumb__link pf-m-current"
                      href="#"
                      target={null}
                    >
                      Section Landing
                    </a>
                  </li>
                </Component>
              </ol>
            </nav>
          </Component>
        </PageBreadcrumb>
      </section>
      <Component
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </Component>
      <Component
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </Component>
      <Component
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </Component>
      <Component
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </Component>
    </main>
  </div>
</Page>
`;

exports[`Check page to verify skip to content points to main content region 1`] = `
<Page
  aria-label="Page layout"
  breadcrumb={
    <Unknown>
      <Unknown>
        Section Home
      </Unknown>
      <Unknown
        to="#"
      >
        Section Title
      </Unknown>
      <Unknown
        to="#"
      >
        Section Title
      </Unknown>
      <Unknown
        isActive={true}
        to="#"
      >
        Section Landing
      </Unknown>
    </Unknown>
  }
  className="my-page-class"
  header={
    <Unknown
      avatar=" | Avatar"
      logo="Logo"
      toolbar="Toolbar"
      topNav="Navigation"
    />
  }
  id="PageId"
  isManagedSidebar={false}
  mainContainerId="main-content-page-layout-test-nav"
  onPageResize={[Function]}
  sidebar={
    <Unknown
      isNavOpen={true}
    />
  }
  skipToContent={
    <SkipToContent
      className=""
      component="a"
      href="#main-content-page-layout-test-nav"
      show={false}
    >
      Skip to Content
    </SkipToContent>
  }
>
  <div
    aria-label="Page layout"
    className="pf-c-page my-page-class"
    id="PageId"
  >
    <SkipToContent
      className=""
      component="a"
      href="#main-content-page-layout-test-nav"
      show={false}
    >
      <a
        className="pf-c-button pf-m-primary pf-c-skip-to-content"
        href="#main-content-page-layout-test-nav"
      >
        Skip to Content
      </a>
    </SkipToContent>
    <Component
      avatar=" | Avatar"
      logo="Logo"
      toolbar="Toolbar"
      topNav="Navigation"
    >
      <header
        className="pf-c-page__header"
        role="banner"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        <div
          className="pf-c-page__header-nav"
        >
          Navigation
        </div>
        <div
          className="pf-c-page__header-tools"
        >
          Toolbar
           | Avatar
        </div>
      </header>
    </Component>
    <Component
      isNavOpen={true}
    >
      <div
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      >
        <div
          className="pf-c-page__sidebar-body"
        />
      </div>
    </Component>
    <main
      className="pf-c-page__main"
      id="main-content-page-layout-test-nav"
      role="main"
      tabIndex={-1}
    >
      <section
        className="pf-c-page__main-breadcrumb"
      >
        <Component>
          <nav
            aria-label="Breadcrumb"
            className="pf-c-breadcrumb"
          >
            <ol
              className="pf-c-breadcrumb__list"
            >
              <Component>
                <li
                  className="pf-c-breadcrumb__item"
                >
                  Section Home
                  <span
                    className="pf-c-breadcrumb__item-divider"
                  >
                    <AngleRightIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                      title={null}
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                          transform=""
                        />
                      </svg>
                    </AngleRightIcon>
                  </span>
                </li>
              </Component>
              <Component
                to="#"
              >
                <li
                  className="pf-c-breadcrumb__item"
                >
                  <a
                    className="pf-c-breadcrumb__link"
                    href="#"
                    target={null}
                  >
                    Section Title
                  </a>
                  <span
                    className="pf-c-breadcrumb__item-divider"
                  >
                    <AngleRightIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                      title={null}
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                          transform=""
                        />
                      </svg>
                    </AngleRightIcon>
                  </span>
                </li>
              </Component>
              <Component
                to="#"
              >
                <li
                  className="pf-c-breadcrumb__item"
                >
                  <a
                    className="pf-c-breadcrumb__link"
                    href="#"
                    target={null}
                  >
                    Section Title
                  </a>
                  <span
                    className="pf-c-breadcrumb__item-divider"
                  >
                    <AngleRightIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                      title={null}
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                          transform=""
                        />
                      </svg>
                    </AngleRightIcon>
                  </span>
                </li>
              </Component>
              <Component
                isActive={true}
                to="#"
              >
                <li
                  className="pf-c-breadcrumb__item"
                >
                  <a
                    aria-current="page"
                    className="pf-c-breadcrumb__link pf-m-current"
                    href="#"
                    target={null}
                  >
                    Section Landing
                  </a>
                </li>
              </Component>
            </ol>
          </nav>
        </Component>
      </section>
      <Component
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </Component>
      <Component
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </Component>
      <Component
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </Component>
      <Component
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </Component>
    </main>
  </div>
</Page>
`;

exports[`Check page vertical layout example against snapshot 1`] = `
<Page
  aria-label="Page layout"
  breadcrumb={null}
  className="my-page-class"
  header={
    <Unknown
      avatar=" | Avatar"
      logo="Logo"
      onNavToggle={[Function]}
      toolbar="Toolbar"
    />
  }
  id="PageId"
  isManagedSidebar={false}
  mainContainerId={null}
  onPageResize={[Function]}
  sidebar={
    <Unknown
      isNavOpen={true}
      nav="Navigation"
    />
  }
  skipToContent={null}
>
  <div
    aria-label="Page layout"
    className="pf-c-page my-page-class"
    id="PageId"
  >
    <Component
      avatar=" | Avatar"
      logo="Logo"
      onNavToggle={[Function]}
      toolbar="Toolbar"
    >
      <header
        className="pf-c-page__header"
        role="banner"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        <div
          className="pf-c-page__header-tools"
        >
          Toolbar
           | Avatar
        </div>
      </header>
    </Component>
    <Component
      isNavOpen={true}
      nav="Navigation"
    >
      <div
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      >
        <div
          className="pf-c-page__sidebar-body"
        >
          Navigation
        </div>
      </div>
    </Component>
    <main
      className="pf-c-page__main"
      id={null}
      role="main"
      tabIndex={-1}
    >
      <Component
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </Component>
      <Component
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </Component>
      <Component
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </Component>
      <Component
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </Component>
    </main>
  </div>
</Page>
`;
